--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         display: flex;
         height: 20px; /* barra maior */
         background: #e0e0e0;
-        border-radius: 12px;
+        border-radius: 12px; /* arredondado */
         overflow: hidden;
         position: relative;
     }
@@ -50,16 +50,16 @@
     .progress-bar {
         height: 100%;
         transition: width 1s ease-in-out;
-    }
-
-    .progress-percent {
-        position: absolute;
-        right: 6px;
-        top: 50%;
-        transform: translateY(-50%);
-        font-weight: 600;
+        border-radius: 12px; /* arredondado no início */
+        display: flex;
+        justify-content: flex-end; /* para colocar a % no final */
+        align-items: center;
+        padding-right: 6px;
         color: #555; /* cinza escuro */
-        font-size: 12px; /* um pouco maior */
+        font-weight: 600;
+        font-size: 12px;
+        box-sizing: border-box;
+        white-space: nowrap;
     }
 
     /* cores individuais */
@@ -77,43 +77,37 @@
     <div class="progress-row">
         <div class="progress-title">Ano</div>
         <div class="progress-bar-container">
-            <div class="progress-bar" id="year-progress"></div>
-            <div class="progress-percent" id="year-percent">0%</div>
+            <div class="progress-bar" id="year-progress">0%</div>
         </div>
     </div>
     <div class="progress-row">
         <div class="progress-title">Semestre</div>
         <div class="progress-bar-container">
-            <div class="progress-bar" id="semester-progress"></div>
-            <div class="progress-percent" id="semester-percent">0%</div>
+            <div class="progress-bar" id="semester-progress">0%</div>
         </div>
     </div>
     <div class="progress-row">
         <div class="progress-title">Trimestre</div>
         <div class="progress-bar-container">
-            <div class="progress-bar" id="quarter-progress"></div>
-            <div class="progress-percent" id="quarter-percent">0%</div>
+            <div class="progress-bar" id="quarter-progress">0%</div>
         </div>
     </div>
     <div class="progress-row">
         <div class="progress-title">Mês</div>
         <div class="progress-bar-container">
-            <div class="progress-bar" id="month-progress"></div>
-            <div class="progress-percent" id="month-percent">0%</div>
+            <div class="progress-bar" id="month-progress">0%</div>
         </div>
     </div>
     <div class="progress-row">
         <div class="progress-title">Semana</div>
         <div class="progress-bar-container">
-            <div class="progress-bar" id="week-progress"></div>
-            <div class="progress-percent" id="week-percent">0%</div>
+            <div class="progress-bar" id="week-progress">0%</div>
         </div>
     </div>
     <div class="progress-row">
         <div class="progress-title">Dia</div>
         <div class="progress-bar-container">
-            <div class="progress-bar" id="day-progress"></div>
-            <div class="progress-percent" id="day-percent">0%</div>
+            <div class="progress-bar" id="day-progress">0%</div>
         </div>
     </div>
 </div>
@@ -136,19 +130,21 @@ function updateProgress() {
         return Math.round(((now - start) / (end - start)) * 100);
     }
 
-    function updateBar(idBar, idPercent, progress) {
+    function updateBar(idBar, progress) {
         const bar = document.getElementById(idBar);
-        const percent = document.getElementById(idPercent);
         bar.style.width = progress + '%';
-        percent.textContent = progress + '%';
+        bar.textContent = progress + '%';
+        // manter borda arredondada apenas se não estiver em 100%
+        bar.style.borderTopRightRadius = progress >= 100 ? '12px' : '12px';
+        bar.style.borderBottomRightRadius = progress >= 100 ? '12px' : '12px';
     }
 
-    updateBar("year-progress","year-percent", getProgress(startOfYear,new Date(now.getFullYear()+1,0,1)));
-    updateBar("semester-progress","semester-percent", getProgress(startOfSemester,new Date(startOfSemester.getFullYear(),startOfSemester.getMonth()+6,1)));
-    updateBar("quarter-progress","quarter-percent", getProgress(startOfQuarter,new Date(startOfQuarter.getFullYear(),startOfQuarter.getMonth()+3,1)));
-    updateBar("month-progress","month-percent", getProgress(startOfMonth,new Date(startOfMonth.getFullYear(),startOfMonth.getMonth()+1,1)));
-    updateBar("week-progress","week-percent", getProgress(startOfWeek,new Date(startOfWeek.getFullYear(),startOfWeek.getMonth(),startOfWeek.getDate()+7)));
-    updateBar("day-progress","day-percent", getProgress(startOfDay,new Date(startOfDay.getFullYear(),startOfDay.getMonth(),startOfDay.getDate()+1)));
+    updateBar("year-progress", getProgress(startOfYear,new Date(now.getFullYear()+1,0,1)));
+    updateBar("semester-progress", getProgress(startOfSemester,new Date(startOfSemester.getFullYear(),startOfSemester.getMonth()+6,1)));
+    updateBar("quarter-progress", getProgress(startOfQuarter,new Date(startOfQuarter.getFullYear(),startOfQuarter.getMonth()+3,1)));
+    updateBar("month-progress", getProgress(startOfMonth,new Date(startOfMonth.getFullYear(),startOfMonth.getMonth()+1,1)));
+    updateBar("week-progress", getProgress(startOfWeek,new Date(startOfWeek.getFullYear(),startOfWeek.getMonth(),startOfWeek.getDate()+7)));
+    updateBar("day-progress", getProgress(startOfDay,new Date(startOfDay.getFullYear(),startOfDay.getMonth(),startOfDay.getDate()+1)));
 }
 
 updateProgress();
