--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         width: 90%;
         max-width: 600px;
         gap: 12px;
+        border-radius: 16px; /* arredondado do card */
+        padding: 16px;
+        background: #e0e0e0; /* fundo do card */
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .progress-row {
@@ -41,8 +45,8 @@
         flex: 1;
         display: flex;
         height: 20px;
-        background: #e0e0e0;
-        border-radius: 12px;
+        background: #f5f5f5; /* fundo barra mais claro */
+        border-radius: 12px; /* arredondado */
         overflow: hidden;
         position: relative;
     }
@@ -55,7 +59,7 @@
         justify-content: flex-end;
         align-items: center;
         padding-right: 6px;
-        color: #ddd; /* cinza claro */
+        color: #888; /* cinza médio */
         font-weight: 600;
         font-size: 12px;
         box-sizing: border-box;
@@ -122,7 +126,7 @@ function updateProgress() {
 
     const startOfWeek = new Date(now);
     startOfWeek.setHours(0,0,0,0);
-    startOfWeek.setDate(now.getDate() - now.getDay());
+    startOfWeek.setDate(now.getDate() - now.getDay()); // domingo
 
     const startOfDay = new Date(now.getFullYear(), now.getMonth(), now.getDate());
 
