--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         width: 90%;
         max-width: 600px;
         gap: 12px;
-        border-radius: 16px; /* arredondado do card */
-        padding: 16px;
+        border-radius: 16px; /* bordas arredondadas do fundo */
         background: #e0e0e0; /* fundo do card */
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        padding: 16px;
+        box-sizing: border-box;
     }
 
     .progress-row {
@@ -45,7 +45,7 @@
         flex: 1;
         display: flex;
         height: 20px;
-        background: #f5f5f5; /* fundo barra mais claro */
+        background: #f0f0f0; /* colado no fundo padrão */
         border-radius: 12px; /* arredondado */
         overflow: hidden;
         position: relative;
@@ -59,7 +59,7 @@
         justify-content: flex-end;
         align-items: center;
         padding-right: 6px;
-        color: #888; /* cinza médio */
+        color: #000; /* fonte preta */
         font-weight: 600;
         font-size: 12px;
         box-sizing: border-box;
@@ -126,7 +126,7 @@ function updateProgress() {
 
     const startOfWeek = new Date(now);
     startOfWeek.setHours(0,0,0,0);
-    startOfWeek.setDate(now.getDate() - now.getDay()); // domingo
+    startOfWeek.setDate(now.getDate() - now.getDay());
 
     const startOfDay = new Date(now.getFullYear(), now.getMonth(), now.getDate());
 
