--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
     body {
         font-family: 'Poppins', sans-serif;
-        background: #f0f0f0;
+        background: #f0f0f0; /* fundo do body */
         display: flex;
         justify-content: center;
         padding: 20px;
@@ -20,10 +20,6 @@
         width: 90%;
         max-width: 600px;
         gap: 12px;
-        border-radius: 16px; /* bordas arredondadas do fundo */
-        background: #e0e0e0; /* fundo do card */
-        padding: 16px;
-        box-sizing: border-box;
     }
 
     .progress-row {
@@ -45,8 +41,8 @@
         flex: 1;
         display: flex;
         height: 20px;
-        background: #f0f0f0; /* colado no fundo padrão */
-        border-radius: 12px; /* arredondado */
+        background: #f0f0f0; /* mesmo fundo do body */
+        border-radius: 12px;
         overflow: hidden;
         position: relative;
     }
@@ -59,7 +55,7 @@
         justify-content: flex-end;
         align-items: center;
         padding-right: 6px;
-        color: #000; /* fonte preta */
+        color: #000; /* porcentagem em preto */
         font-weight: 600;
         font-size: 12px;
         box-sizing: border-box;
