--- a/index.html
+++ b/index.html
@@ -152,4 +152,8 @@ function updateProgress() {
 }
 
 updateProgress();
-setInterval(updateProgress, 60
+setInterval(updateProgress, 60000);
+</script>
+
+</body>
+</html>
